// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SidebarToggleButton > Testowanie różnych stanów komponentu > snapshot test - sidebar rozwinięty (collapsed = false) 1`] = `
<button
  aria-label="Collapse sidebar"
  aria-pressed="false"
  class="flex items-center gap-3 rounded-md py-2 hover:bg-blue-700 hover:bg-opacity-50 transition-colors text-white w-full cursor-pointer px-3 mt-2.4"
>
  <svg
    class="h-5 w-5"
    data-testid="chevron-left-icon"
  >
    <path />
  </svg>
</button>
`;

exports[`SidebarToggleButton > Testowanie różnych stanów komponentu > snapshot test - sidebar zwinięty (collapsed = true) 1`] = `
<button
  aria-label="Expand sidebar"
  aria-pressed="true"
  class="flex items-center gap-3 rounded-md py-2 hover:bg-blue-700 hover:bg-opacity-50 transition-colors text-white w-full cursor-pointer justify-center position: absolute md:relative left-13 top-3 md:top-[unset] md:left-[unset] mt-2.4"
>
  <svg
    class="h-5 w-5"
    data-testid="menu-icon"
  >
    <path />
  </svg>
</button>
`;
